--- a/core/config/src/main/adoc/modules/config/pages/sections/causeway.persistence.schema.adoc
+++ b/core/config/src/main/adoc/modules/config/pages/sections/causeway.persistence.schema.adoc
@@ -16,7 +16,7 @@ include::../section-hooks/causeway.persistence.schema~pre.adoc[]
 causeway.persistence.schema. +
 additional-orm-files
 
-|
+| 
 | Does lookup additional "mapping-files" in META-INF/orm-_name_.xml (equivalent to "mapping-file" entries in persistence.xml) and adds these to those that are already configured the _Spring Data_ way (if any). NOTE: not implemented for JDO
 
 
@@ -25,7 +25,7 @@ additional-orm-files
 causeway.persistence.schema. +
 auto-create-schemas
 
-|
+| 
 | List of additional schemas to be auto-created.
 
 Explicitly creates given list of schemas by using the specified ``#getCreateSchemaSqlTemplate()`` to generate the actual SQL statement against the configured data-source.
@@ -38,10 +38,10 @@ This configuration mechanism does not consider any schema-auto-creation configur
 causeway.persistence.schema. +
 create-schema-sql-template
 
-|
+|  CREATE SCHEMA IF NOT EXISTS %S
 | Vendor specific SQL syntax to create a DB schema.
 
-This template is passed through schemaName) to make the actual SQL statement thats to be used against the configured data-source.
+This template is passed through ``String#format(String, Object...)`` to make the actual SQL statement thats to be used against the configured data-source.
 
 Default template is \{@literal CREATE SCHEMA IF NOT EXISTS %S} with the schema name converted to upper-case.
 
