--- a/core/config/src/main/adoc/modules/config/pages/sections/causeway.core.meta-model.introspector.adoc
+++ b/core/config/src/main/adoc/modules/config/pages/sections/causeway.core.meta-model.introspector.adoc
@@ -13,10 +13,11 @@ include::../section-hooks/causeway.core.meta-model.introspector~pre.adoc[]
 |Description
 |
 [[causeway.core.meta-model.introspector.lock-after-full-introspection]]
-causeway.core.meta-model.introspector. +
+causeway.core.meta-model. +
+introspector. +
 lock-after-full-introspection
 
-|
+|  true
 | If true, then no new specifications will be allowed to be loaded once introspection has been complete.
 
 Only applies if the introspector is configured to perform full introspection up-front (either because of ``IntrospectionMode#FULL`` or ``IntrospectionMode#LAZY_UNLESS_PRODUCTION`` when in production); otherwise is ignored.
@@ -24,10 +25,10 @@ Only applies if the introspector is configured to perform full introspection up-
 
 |
 [[causeway.core.meta-model.introspector.mode]]
-causeway.core.meta-model.introspector. +
-mode
+causeway.core.meta-model. +
+introspector.mode
 
-|
+| 
 | Whether all known types should be fully introspected as part of the bootstrapping, or should only be partially introspected initially.
 
 Leaving this as lazy means that there's a chance that metamodel validation errors will not be discovered during bootstrap. That said, metamodel validation is still run incrementally for any classes introspected lazily after initial bootstrapping (unless ``#isValidateIncrementally()`` is disabled.
@@ -35,21 +36,21 @@ Leaving this as lazy means that there's a chance that metamodel validation error
 
 |
 [[causeway.core.meta-model.introspector.parallelize]]
-causeway.core.meta-model.introspector. +
-parallelize
+causeway.core.meta-model. +
+introspector.parallelize
 
-|
-| Whether to perform introspection in parallel. Meant to speed up bootstrapping.
+| 
+| Whether to perform metamodel introspection in parallel, intended to speed up bootstrapping.
 
-For now this is _experimental_. Leave this disabled (the default).
+For now this is _experimental_. We recommend this is left as disabled (the default).
 
 
 |
 [[causeway.core.meta-model.introspector.policy]]
-causeway.core.meta-model.introspector. +
-policy
+causeway.core.meta-model. +
+introspector.policy
 
-|
+| 
 | Policy as to how introspection should process class members and supporting methods.
 
 Default is to only introspect public class members, while annotating these is optional.
@@ -57,15 +58,16 @@ Default is to only introspect public class members, while annotating these is op
 
 |
 [[causeway.core.meta-model.introspector.validate-incrementally]]
-causeway.core.meta-model.introspector. +
+causeway.core.meta-model. +
+introspector. +
 validate-incrementally
 
-|
+|  true
 | If true, then metamodel validation is performed after any new specification has been loaded (after the initial bootstrapping).
 
 This does _not_ apply if the introspector is configured to perform full introspection up-front AND when the metamodel is locked after initial bootstrapping (because in that case the lock check will simply prevent any new specs from being loaded). But it will apply otherwise.
 
-In particular, this setting _can_ still apply even if the introspection mode is set to full, because that in itself does not preclude some code from attempting to load some previously unknown type. For example, a fixture script could attempt to invoke an action on some new type using the ``WrapperFactory`` - this will cause introspection of that new type to be performed.
+In particular, this setting _can_ still apply even if the mode is set to full, because that in itself does not preclude some code from attempting to load some previously unknown type. For example, a fixture script could attempt to invoke an action on some new type using the ``WrapperFactory`` - this will cause introspection of that new type to be performed.
 
 
 
