--- a/core/config/src/main/adoc/modules/config/pages/sections/causeway.core.runtime-services.adoc
+++ b/core/config/src/main/adoc/modules/config/pages/sections/causeway.core.runtime-services.adoc
@@ -16,52 +16,52 @@ include::../section-hooks/causeway.core.runtime-services~pre.adoc[]
 causeway.core.runtime-services. +
 application-features.init
 
-|
+| 
 | Whether the ``ApplicationFeatureRepository`` (or the default implementation of that service, at least) should compute the set of ``ApplicationFeature`` that describe the metamodel eagerly, or lazily.
 
 
 |
 [[causeway.core.runtime-services.email.override.bcc]]
-causeway.core.runtime-services.email. +
-override.bcc
+causeway.core.runtime-services. +
+email.override.bcc
 
-|
+| 
 | Intended for testing purposes only, if set then the requested ``bcc:`` of the email will be ignored, and instead sent to this email address instead.
 
 
 |
 [[causeway.core.runtime-services.email.override.cc]]
-causeway.core.runtime-services.email. +
-override.cc
+causeway.core.runtime-services. +
+email.override.cc
 
-|
+| 
 | Intended for testing purposes only, if set then the requested ``cc:`` of the email will be ignored, and instead sent to this email address instead.
 
 
 |
 [[causeway.core.runtime-services.email.override.to]]
-causeway.core.runtime-services.email. +
-override.to
+causeway.core.runtime-services. +
+email.override.to
 
-|
+| 
 | Intended for testing purposes only, if set then the requested ``to:`` of the email will be ignored, and instead sent to this email address instead.
 
 
 |
 [[causeway.core.runtime-services.email.port]]
-causeway.core.runtime-services.email. +
-port
+causeway.core.runtime-services. +
+email.port
 
-|
+|  587
 | The port to use for sending email.
 
 
 |
 [[causeway.core.runtime-services.email.sender.address]]
-causeway.core.runtime-services.email. +
-sender.address
+causeway.core.runtime-services. +
+email.sender.address
 
-|
+| 
 | Specifies the email address of the user sending the email.
 
 If the username is not specified, is also used as the username to connect to the SMTP service.
@@ -71,10 +71,10 @@ This configuration property is mandatory (for the default implementation of the 
 
 |
 [[causeway.core.runtime-services.email.sender.hostname]]
-causeway.core.runtime-services.email. +
-sender.hostname
+causeway.core.runtime-services. +
+email.sender.hostname
 
-|
+| 
 | Specifies the host running the SMTP service.
 
 If not specified, then the value used depends upon the email implementation. The default implementation will use the ``host`` system property.
@@ -82,10 +82,10 @@ If not specified, then the value used depends upon the email implementation. The
 
 |
 [[causeway.core.runtime-services.email.sender.password]]
-causeway.core.runtime-services.email. +
-sender.password
+causeway.core.runtime-services. +
+email.sender.password
 
-|
+| 
 | Specifies the password (corresponding to the username to connect to the SMTP service.
 
 This configuration property is mandatory (for the default implementation of the ``EmailService``, at least).
@@ -93,48 +93,48 @@ This configuration property is mandatory (for the default implementation of the 
 
 |
 [[causeway.core.runtime-services.email.sender.username]]
-causeway.core.runtime-services.email. +
-sender.username
+causeway.core.runtime-services. +
+email.sender.username
 
-|
+| 
 | Specifies the username to use to connect to the SMTP service.
 
-If not specified, then the sender's email address will be used instead.
+If not specified, then the sender's address will be used instead.
 
 
 |
 [[causeway.core.runtime-services.email.socket-connection-timeout]]
-causeway.core.runtime-services.email. +
-socket-connection-timeout
+causeway.core.runtime-services. +
+email.socket-connection-timeout
 
-|
+|  2000
 | The maximum number of millseconds to wait to obtain a socket connection before timing out.
 
 
 |
 [[causeway.core.runtime-services.email.socket-timeout]]
-causeway.core.runtime-services.email. +
-socket-timeout
+causeway.core.runtime-services. +
+email.socket-timeout
 
-|
+|  2000
 | The maximum number of millseconds to wait to obtain a socket before timing out.
 
 
 |
 [[causeway.core.runtime-services.email.throw-exception-on-fail]]
-causeway.core.runtime-services.email. +
-throw-exception-on-fail
+causeway.core.runtime-services. +
+email.throw-exception-on-fail
 
-|
-| If an email fails to send, whether to propagate the exception (meaning that potentially the end-user might see the exception), or whether instead to just indicate failure through the return value of the method (List, List, String, String, DataSource...) that's being called.
+|  true
+| If an email fails to send, whether to propagate the exception (meaning that potentially the end-user might see the exception), or whether instead to just indicate failure through the return value of the method (``EmailService#send(List, List, List, String, String, DataSource...)`` that's being called.
 
 
 |
 [[causeway.core.runtime-services.email.tls.enabled]]
-causeway.core.runtime-services.email. +
-tls.enabled
+causeway.core.runtime-services. +
+email.tls.enabled
 
-|
+|  true
 | Whether TLS encryption should be started (that is, ``STARTTLS``).
 
 
@@ -143,7 +143,7 @@ tls.enabled
 causeway.core.runtime-services. +
 exception-recognizer.dae.disable
 
-|
+| 
 | Whether the ``ExceptionRecognizer`` implementation for Spring's DataAccessException - which attempts to sanitize any exceptions arising from object stores - should be disabled (meaning that exceptions will potentially propagate as more serious to the end user).
 
 
@@ -153,7 +153,7 @@ causeway.core.runtime-services. +
 repository-service. +
 disable-auto-flush
 
-|
+| 
 | Normally any queries are automatically preceded by flushing pending executions.
 
 This key allows this behaviour to be disabled.
@@ -166,7 +166,7 @@ NOTE: this key is redundant for JPA/EclipseLink, which supports its own auto-flu
 causeway.core.runtime-services. +
 translation.po.mode
 
-|
+| 
 | Specifies the initial mode for obtaining/discovering translations.
 
 There are three modes:
@@ -181,7 +181,7 @@ There are three modes:
 causeway.core.runtime-services. +
 translation.resource-location
 
-|
+| 
 | Specifies the relative resource path to look for translation files.
 
 If \{@code null} uses \{@code servletContext.getResource("/WEB-INF/")}.
