--- a/core/config/src/main/adoc/modules/config/pages/sections/causeway.security.spring.adoc
+++ b/core/config/src/main/adoc/modules/config/pages/sections/causeway.security.spring.adoc
@@ -16,10 +16,10 @@ include::../section-hooks/causeway.security.spring~pre.adoc[]
 causeway.security.spring. +
 allow-csrf-filters
 
-|
+| 
 | The framework on initialization by default disables any \{@code CsrfFilter}(s) it finds with _Spring Security_ registered filters.
 
-Setting this option to \{@literal true} allows \{@code CsrfFilter}(s) to be configured. Yet EXPERIMENTAL. @see org.springframework.security.web.csrf.CsrfFilter @see "https://www.baeldung.com/spring-security-registered-filters"
+Setting this option to \{@literal true} allows \{@code CsrfFilter}(s) to be configured. Yet EXPERIMENTAL. @see ``CsrfFilter`` @see "https://www.baeldung.com/spring-security-registered-filters"
 
 
 
