--- a/antora/components/refguide-index/modules/applib/pages/index/services/menu/hooks/MenuBarsLoaderService_010-implementation.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/menu/hooks/MenuBarsLoaderService_010-implementation.adoc
@@ -8,7 +8,7 @@
 The framework provides a default implementation of this service, namely `o.a.i.core.runtimeservices.menubars.MenuBarsLoaderServiceDefault`.
 This searches for a classpath resource `menubars.layout.xml`, located ni the root package.
 
-If using the Wicket viewer, the location of this file (and its name) can be overridden using the `causeway.viewer.wicket.application.menubars-layout-xml` configuration property.
+If using the Wicket viewer, the location of this file (and its name) can be overridden using the `causeway.viewer.wicket.application.menubars-layout-file` configuration property.
 
 For example:
 
@@ -17,9 +17,9 @@ For example:
 ----
 causeway:
   viewer:
-    wicket:
+    common:
       application:
-        menubars-layout-xml: demoapp/dom/menubars.layout.xml
+        menubars-layout-file: demoapp/dom/menubars.layout.xml
 ----
 
-The default implementaiton supports reloading only in prototype mode.
+The default implementation supports reloading only in prototype mode.
